Using non-deprecated method in JDK10